FRI-60 Refactor: clean up the way branch metadata is read and set.